# juggertube/static/openapi.yaml
@@ -137,7 +137,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /tournaments:
+  /api/tournaments:
     get:
       tags:
         - tournament
@@ -152,7 +152,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Tournament'
-  /tournaments/add:
+  /api/tournaments/add:
     post:
       tags:
         - tournament
@@ -162,6 +162,12 @@ paths:
         - name: name
           in: query
           description: Name of new Tournament
+          required: true
+          schema:
+            type: string
+        - name: city
+          in: query
+          description: City where new Tournament takes place
           required: true
           schema:
             type: string
@@ -182,7 +188,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /tournaments/edit/{tournamentId}:
+  /api/tournaments/edit/{tournamentId}:
     post:
       tags:
         - tournament
@@ -199,6 +205,12 @@ paths:
         - name: name
           in: query
           description: Name of Tournament
+          required: true
+          schema:
+            type: string
+        - name: city
+          in: query
+          description: City of Tournament
           required: true
           schema:
             type: string
@@ -231,7 +243,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /tournaments/delete/{tournamentId}:
+  /api/tournaments/delete/{tournamentId}:
     get:
       tags:
         - tournament
@@ -258,7 +270,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /channels:
+  /api/channels:
     get:
       tags:
         - channel
@@ -273,7 +285,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Channel'
-  /channels/add:
+  /api/channels/add:
     post:
       tags:
         - channel
@@ -299,7 +311,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /channels/edit/{channelId}:
+  /api/channels/edit/{channelId}:
     post:
       tags:
         - channel
@@ -343,7 +355,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /channels/delete/{channelId}:
+  /api/channels/delete/{channelId}:
     get:
       tags:
         - channel
@@ -370,7 +382,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /videos:
+  /api/videos:
       get:
         tags:
           - video
@@ -385,7 +397,7 @@ paths:
                   type: array
                   items:
                     $ref: '#/components/schemas/Video'
-  /videos/add:
+  /api/videos/add:
     post:
       tags:
         - video
@@ -478,7 +490,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /videos/edit/{videoId}:
+  /api/videos/edit/{videoId}:
     post:
       tags:
         - video
@@ -591,7 +603,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-  /videos/delete/{videoId}:
+  /api/videos/delete/{videoId}:
     get:
       tags:
         - video
